<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:validate="http://schemas.android.com/apk/res-auto"
    tools:context="com.biin.biin.RegisterActivity"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/ivRegisterBack"
        android:src="@drawable/left_arrow"
        android:background="@color/colorOrange"
        android:scaleType="center" />

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:text="@string/SignUpTitle"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGrey"
        android:background="@color/colorAccent"
        android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ivRegisterBack"
        android:layout_alignBottom="@+id/ivRegisterBack"
        android:layout_alignTop="@+id/ivRegisterBack"
        android:layout_toLeftOf="@+id/ivRegisterBack"
        android:gravity="center" />

    <com.andreabaccega.widget.FormEditText
        validate:testType="nocheck"
        validate:emptyErrorString="@string/EmptyString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etRegisterName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Name"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_below="@+id/ivRegisterBack"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:inputType="textCapWords|textPersonName" />

    <com.andreabaccega.widget.FormEditText
        validate:testType="nocheck"
        validate:emptyErrorString="@string/EmptyString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textPersonName"
        android:ems="10"
        android:id="@+id/etRegisterLastName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Lastname"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_below="@+id/etRegisterName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp" />

    <com.andreabaccega.widget.FormEditText
        validate:testType="email"
        validate:emptyErrorString="@string/EmptyString"
        validate:testErrorString="@string/EmailFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etRegisterEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Email"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_below="@+id/etRegisterLastName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp" />

    <com.andreabaccega.widget.FormEditText
        validate:testType="nocheck"
        validate:emptyErrorString="@string/EmptyString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRegisterPass"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Password"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_below="@+id/etRegisterEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Optionales"
        android:id="@+id/tvShareWithUs"
        android:layout_below="@+id/etRegisterPass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender"
        android:id="@+id/tvRegisterGender"
        android:layout_below="@+id/tvShareWithUs"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:background="@color/colorAccent" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/ivRegisterMale"
        android:src="@drawable/male"
        android:layout_alignTop="@+id/tvRegisterGender"
        android:layout_alignEnd="@+id/tvRegisterGender"
        android:layout_alignBottom="@+id/tvRegisterGender"
        android:layout_marginRight="12dp"
        android:background="@drawable/bg_feedback"
        android:tint="@color/colorPrimary"
        android:scaleType="center" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/ivRegisterFemale"
        android:layout_marginRight="6dp"
        android:src="@drawable/female"
        android:layout_above="@+id/tvRegisterBirthdate"
        android:layout_toStartOf="@+id/ivRegisterMale"
        android:layout_below="@+id/tvShareWithUs"
        android:background="@drawable/bg_feedback"
        android:tint="@color/colorPrimary"
        android:scaleType="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterYourBirthDate"
        android:id="@+id/tvRegisterBirthdate"
        android:layout_below="@+id/tvRegisterGender"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LetsGetStarted"
        android:id="@+id/tvRegisterFinish"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorOrange"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/tvRegisterBirthdate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/DontForget"
        android:id="@+id/tvCheckMail"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="6dp" />

</RelativeLayout>
