<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:id="@+id/tvMenuProfile"
        android:layout_alignParentTop="true"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentGray"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignStart="@+id/tvMenuFavourites"
        android:layout_alignEnd="@+id/tvMenuFavourites"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Collections"
        android:id="@+id/tvMenuFavourites"
        android:layout_below="@+id/tvMenuProfile"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentGray"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InviteFriends"
        android:id="@+id/tvMenuFriends"
        android:layout_below="@+id/tvMenuFavourites"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentGray"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:id="@+id/tvMenuAbout"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:textColor="@color/colorAccentGray"
        android:textSize="14sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignStart="@+id/tvMenuFavourites"
        android:layout_alignEnd="@+id/tvMenuProfile"
        android:gravity="center" />

</RelativeLayout>