<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biin.biin.Utils.Onboarding.OnboardingFourFragment"
    android:gravity="center"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivOnboarding4"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/biin_fit"
        android:adjustViewBounds="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wellcome"
        android:id="@+id/tvOnboardingTitle4"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartDesc"
        android:id="@+id/tvOnboardingText4"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/tvOnboardingStart"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorOrange"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

</LinearLayout>
