<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biin.biin.SplashActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvLoading"
        android:gravity="center"
        android:id="@+id/vlSplash">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivSplash"
            android:layout_centerHorizontal="true"
            android:src="@drawable/biin_fit"
            android:scaleType="fitCenter"
            android:layout_above="@+id/tvLoading"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Version"
            android:id="@+id/tvSplashVersion"
            android:textSize="12sp" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoading"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/vlSplash"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorOrange"
        android:indeterminateTintMode="src_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Loading"
        android:id="@+id/tvLoading"
        android:layout_above="@+id/pbLoading"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContinueBtn"
        android:id="@+id/tvReload"
        android:layout_alignEnd="@+id/vlSplash"
        android:textAllCaps="true"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightGrey"
        android:layout_marginBottom="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/vlSplash"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>
